头痛MAP 继续问诊头痛部位修改

--- a/HeadacheCDSSWeb/Views/Diagnosis/Index.cshtml
+++ b/HeadacheCDSSWeb/Views/Diagnosis/Index.cshtml
@@ -20,16 +20,17 @@
    <div id="picture">
    <img src="../../Content/images/peoplehead.jpg"  id="first" usemap="#Map" alt="text"/>
    <map name="Map" id="Map">
-  <area id="p1" shape="poly" title="耳部" coords="255,268,267,275,281,275,291,266,297,258,303,247,305,237,308,228,311,219,311,207,308,200,303,192,301,184,294,178,286,177,285,176,284,176,274,174,269,177,271,178,268,180,263,186,258,197,263,209,274,215,273,226,270,230,269,236,271,244,265,249,261,255,256,260" href="#" />
-  <area id="p2" shape="poly" title="枕部" coords="386,197,364,205,357,215,351,230,346,251,346,261,348,277,354,286,362,295,367,294,374,284,380,272,387,258,393,241,401,222,404,205,403,195" href="#"  />
-  <area id="p3" shape="poly" title="颈部" coords="362,334,312,341,262,350,217,370,169,394,181,424,188,446,230,442,323,444,342,442,361,445,407,445,412,444,417,441,396,412,385,397,375,375,368,359" href="#"  />
-  <area id="p4" shape="poly" title="额部" coords="109,97,102,109,98,122,93,135,111,141,127,143,140,141,157,135,156,114,158,96,151,85,142,79,132,70,118,84" href="#"  />
-  <area id="p5" shape="poly" title="顶部" coords="218,37,172,45,131,67,150,84,173,79,185,83,202,82,221,80,268,79,306,76,347,67,321,53,269,39" href="#"  />
-  <area id="p6" shape="poly" title="颌部" coords="64,306,61,298,69,284,90,283,114,314,128,325,144,344,151,367,115,386,90,382,75,369,73,362,76,343,67,321,69,313" href="#"  />
-  <area id="p7" shape="poly" title="眶部" coords="82,167,97,164,113,162,132,173,136,184,141,192,141,199,143,206,130,213,117,218,100,219,100,214,99,208,101,197,92,189" href="#"  />
-  <area id="p8" shape="poly" title="颞部" coords="149,172,147,190,156,204,163,214,171,219,188,226,208,223,216,216,223,204,229,183,212,161,193,154,175,154,165,157" href="#"  />
-  <area id="p9" shape="poly" title="脸部" coords="99,223,95,233,91,242,91,252,92,266,96,280,104,294,119,312,140,331,148,331,155,332,163,325,167,321,175,312,188,297,192,282,193,262,188,242,184,228,174,222,158,218,129,220" href="#"  />
+  <area id="p1" shape="poly" title="耳部" coords="247,290,270,310,286,301,289,300,311,285,311,273,314,262,316,247,320,234,318,219,318,202,316,194,313,176,305,168,295,160,284,148,284,148,275,141,272,148,268,149,265,157,263,167,260,175,258,179,258,187,253,202,249,212,246,222,245,224,239,241,235,240,241,271" href="#" />
+  <area id="p2" shape="poly" title="枕部" coords="382,95,317,113,277,142,313,173,320,214,317,250,310,287,288,302,364,313,365,298,375,284,381,272,388,258,394,241,405,205,406,188,403,151" href="#"  />
+  <area id="p3" shape="poly" title="颈部" coords="362,334,364,313,285,301,208,355,165,389,182,423,189,445,231,446,324,443,346,444,362,444,408,444,413,443,418,440,397,411,386,396,376,374,369,358" href="#"  />
+  <area id="p4" shape="poly" title="额部" coords="110,97,103,109,99,122,84,155,105,154,123,164,148,180,171,144,194,122,184,105,149,85,143,79,133,70,119,84" href="#"  />
+  <area id="p5" shape="poly" title="顶部" coords="216,37,170,45,131,68,148,84,185,108,190,118,234,134,266,148,313,114,378,94,345,67,319,53,267,39" href="#"  />
+  <area id="p6" shape="poly" title="颌部" coords="64,306,61,298,69,284,91,282,119,312,131,325,153,339,203,361,163,389,103,387,84,378,73,362,76,343,67,321,69,313" href="#"  />
+  <area id="p7" shape="poly" title="眶部" coords="79,172,83,156,106,155,129,169,145,180,150,192,152,201,150,212,144,220,127,223,104,223,99,215,98,209,99,202,83,184" href="#"  />
+  <area id="p8" shape="poly" title="颞部" coords="152,171,147,182,153,203,146,219,174,219,191,225,238,241,245,223,252,202,267,148,232,134,197,119,171,144,164,156" href="#"  />
+  <area id="p9" shape="poly" title="脸部" coords="99,223,95,233,91,242,87,252,87,265,91,280,104,294,119,312,140,331,150,335,160,342,197,358,203,358,245,329,271,310,246,289,238,266,236,242,198,228,176,221,158,218,131,224" href="#"  />
 </map>
+
 
    </div>
    
@@ -46,9 +47,8 @@
         function GetHeadachePlace()
         { 
           var placesid=new Array("#p1","#p2","#p3","#p4","#p5","#p6","#p7","#p8","#p9");
-           var places=new Array("耳部","枕部","颈部","额部","顶部","颌部","眶部","颞部","脸部");
+          var places=new Array("耳部","枕部","颈部","额部","顶部","颌部","眶部","颞部","脸部");
           var placevalues=new Array(9);
-        
                for (var i=0;i<9;i++)
                 {
                   var data = $(placesid[i]).mouseout().data('maphilight') || {};
@@ -58,7 +58,6 @@
                     else{
                      placevalues[i]=false;
                     }
-                 
                 }
                 return placevalues;
         }
@@ -85,6 +84,7 @@ $("#submenu").hide();
     if(null != obj.Address)
         OCX.SetObjectInfo("TextBox_8", "text", obj.Address);
         //头疼部位点击
+        debugger;
            $('#p1').click(function (e) {
             e.preventDefault();
             var data = $('#p1').mouseout().data('maphilight') || {};
@@ -115,7 +115,7 @@ $("#submenu").hide();
         });
         $('#p5').click(function (e) {
             e.preventDefault();
-            var data = $('#p   5').mouseout().data('maphilight') || {};
+            var data = $('#p5').mouseout().data('maphilight') || {};
             data.alwaysOn = !data.alwaysOn;                            
             $('#p5').data('maphilight', data).trigger('alwaysOn.maphilight');
 
