--- a/HeadacheCDSSWeb/Views/Shared/Diagnosis_Layout.cshtml
+++ b/HeadacheCDSSWeb/Views/Shared/Diagnosis_Layout.cshtml
@@ -5,7 +5,9 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/indexstyle.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
+     <script src="@Url.Content("~/Scripts/jquery-1.9.1.js")" type="text/javascript"></script>
+     <script src="@Url.Content("~/Scripts/jquery-1.7.2.min.js")" type="text/javascript"></script>
+@*  <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>*@
     <script src="@Url.Content("~/Scripts/jquery.json-2.4.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
     <link href="@Url.Content("~/Content/wbox-min.css")" rel="stylesheet" type="text/css" />
@@ -22,7 +24,6 @@
         <div id="menu">
             <ul class="“progress”">
                 <li id="基本筛查" class="selected"><b><p>1</p></b><a>继发筛查</a><div id="arrow"></div></li>
-              
                 <li id="头痛问诊" ><b><p>2</p></b><a>头痛问诊</a><div id="arrow"></div></li>
                 <li id="辅助诊断"><b><p>3</p></b><a>辅助诊断</a><div id="arrow"></div></li>
                 <li id="医嘱处置"><b><p>4</p></b><a>医嘱处置</a><div id="arrow"></div></li>
@@ -30,6 +31,7 @@
             </ul>
         </div>
         <div id="direct">
+        <div id="info"></div>
             <ul>
                 <li class="active"><a></a></li>
                 <li><a></a></li>
